2009-10-15  Anthony Green  <green@moxielogic.com>

	* All files: Poof!  Created.
