@@ -1,0 +1,85 @@
+/* Instruction names for The Incredible Moxielyzer 
+   (C) 2009 Anthony Green
+
+This file is part of The Incredible Moxielyzer
+
+The Incredible Moxielyzer is free software; you can redistribute it
+and/or modify it under the terms of the GNU General Public License as
+published by the Free Software Foundation; either version 3, or (at
+your option) any later version.
+
+The Incredible Moxielyzer is distributed in the hope that it will be
+useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with The Incredible Moxielyzer; see the file COPYING3.  If not
+see <http://www.gnu.org/licenses/>.  */
+
+const char *moxie_insn_names[] =
+  {
+    "ALL",
+    "add.l",
+    "and",
+    "ashl",
+    "ashr",
+    "bad ",
+    "beq ",
+    "bge ",
+    "bgeu",
+    "bgt ",
+    "bgtu",
+    "ble ",
+    "bleu",
+    "blt",
+    "bltu",
+    "bne",
+    "brk",
+    "cmp",
+    "dec",
+    "div.l",
+    "gsr",
+    "inc",
+    "jmp",
+    "jmpa",
+    "jsr",
+    "jsra",
+    "ld.b",
+    "ld.l",
+    "ld.s",
+    "lda.b",
+    "lda.l",
+    "lda.s",
+    "ldi.b",
+    "ldi.l",
+    "ldi.s",
+    "ldo.b",
+    "ldo.l",
+    "ldo.s",
+    "lshr",
+    "mod.l",
+    "mov",
+    "mul.l",
+    "neg",
+    "nop",
+    "not",
+    "or",
+    "pop",
+    "push",
+    "ret",
+    "ssr",
+    "st.b",
+    "st.l",
+    "st.s",
+    "sta.b",
+    "sta.l",
+    "sta.s",
+    "sto.b",
+    "sto.l",
+    "sto.s",
+    "sub.l",
+    "swi",
+    "udiv.l",
+    "umod.l",
+    "xor" };
